# my_radio_gui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
smart_radio_pro_PyQt6_v13/: .gitignore  LICENSE  README.md
smart_radio_pro_PyQt6_v13/smart_radio_v13/: CHANGELOG.md  logos.db  main.py  radio_log.txt  recent.json  requirements.txt  session.json  stats.json
smart_radio_pro_PyQt6_v13/smart_radio_v13/core/: api.py  config.py  equalizer.py  player.py  state.py
smart_radio_pro_PyQt6_v13/smart_radio_v13/services/: station_service.py
smart_radio_pro_PyQt6_v13/smart_radio_v13/ui/: app_ui.py  components.py  mini_player.py  spectrum.py
smart_radio_pro_PyQt6_v13/smart_radio_v13/utils/: logger.py  logo_cache.py  logo_loader.py  maintenance.py  notifier.py  stats.py  storage.py
src/smart_radio_pro/: __init__.py  main.py
src/smart_radio_pro/core/: api.py  config.py  equalizer.py  player.py  theme.py
src/smart_radio_pro/services/: station_service.py
src/smart_radio_pro/ui/: app_ui.py  components.py  mini_player.py  spectrum.py
src/smart_radio_pro/utils/: logo_cache.py  logo_loader.py  maintenance.py  notifier.py  stats.py  storage.py
